plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

apply from: 'publish.gradle'

java {
    modularity.inferModulePath = true
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15

}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

test {
    jvmArgs(['--enable-preview'])
}

version '0.2-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation project(':samples')
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation 'org.hamcrest:hamcrest-library:1.3'
}

javadoc{
    source = sourceSets.main.allJava
    options {
        addBooleanOption('-enable-preview', true)
        addStringOption('-release', '15')
    }
}